# slc

./: .gitignore  CMakeLists.txt  README.md  flake.nix
.direnv/: flake-profile-13-link
include/slc/: slc.hpp  util.hpp
include/slc/formats/: v2.hpp  v3.hpp
include/slc/formats/v3/: action.hpp  atom.hpp  builtin.hpp  error.hpp  metadata.hpp  replay.hpp  section.hpp
src/: slcconv.cpp
test/: main.cpp
